crates/interpreter/src/snapshots/interpreter__parser__tests__full_precedence_chain_snapshot.snap
---
source: crates/interpreter/src/parser.rs
expression: ast
---
Ast {
    exprs: [
        Expr {
            kind: Identifier(
                Ident {
                    name: "a",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 0,
                        end: 1,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 1,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "b",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 5,
                        end: 6,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 5,
                end: 6,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "c",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 10,
                        end: 11,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 10,
                end: 11,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "d",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 16,
                        end: 17,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 16,
                end: 17,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "e",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 20,
                        end: 21,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 20,
                end: 21,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "f",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 24,
                        end: 25,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 24,
                end: 25,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "g",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 28,
                        end: 29,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 28,
                end: 29,
            },
        },
        Expr {
            kind: Binary {
                op: Mul,
                lhs: ExprId(
                    5,
                ),
                rhs: ExprId(
                    6,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 24,
                end: 29,
            },
        },
        Expr {
            kind: Binary {
                op: Add,
                lhs: ExprId(
                    4,
                ),
                rhs: ExprId(
                    7,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 20,
                end: 29,
            },
        },
        Expr {
            kind: Binary {
                op: Lt,
                lhs: ExprId(
                    3,
                ),
                rhs: ExprId(
                    8,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 16,
                end: 29,
            },
        },
        Expr {
            kind: Binary {
                op: Eq,
                lhs: ExprId(
                    2,
                ),
                rhs: ExprId(
                    9,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 10,
                end: 29,
            },
        },
        Expr {
            kind: Binary {
                op: And,
                lhs: ExprId(
                    1,
                ),
                rhs: ExprId(
                    10,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 5,
                end: 29,
            },
        },
        Expr {
            kind: Binary {
                op: Or,
                lhs: ExprId(
                    0,
                ),
                rhs: ExprId(
                    11,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 29,
            },
        },
    ],
    stmts: [
        Stmt {
            kind: Expr(
                ExprId(
                    12,
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 30,
            },
        },
    ],
    top_level: [
        StmtId(
            0,
        ),
    ],
    pattern_origins: {},
    tuple_pattern_sources: {},
    for_of_pattern_bindings: {},
    exported_decls: [],
}
