crates/interpreter/src/snapshots/interpreter__parser__tests__snapshot_function_with_if_and_return.snap
---
source: crates/interpreter/src/parser.rs
expression: ast
---
Ast {
    exprs: [
        Expr {
            kind: Identifier(
                Ident {
                    name: "n",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 48,
                        end: 49,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 48,
                end: 49,
            },
        },
        Expr {
            kind: Number(
                0.0,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 52,
                end: 53,
            },
        },
        Expr {
            kind: Binary {
                op: Gt,
                lhs: ExprId(
                    0,
                ),
                rhs: ExprId(
                    1,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 48,
                end: 53,
            },
        },
        Expr {
            kind: Boolean(
                true,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 68,
                end: 72,
            },
        },
        Expr {
            kind: Boolean(
                false,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 96,
                end: 101,
            },
        },
    ],
    stmts: [
        Stmt {
            kind: Return(
                Some(
                    ExprId(
                        3,
                    ),
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 61,
                end: 73,
            },
        },
        Stmt {
            kind: Block(
                [
                    StmtId(
                        0,
                    ),
                ],
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 55,
                end: 77,
            },
        },
        Stmt {
            kind: Return(
                Some(
                    ExprId(
                        4,
                    ),
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 89,
                end: 102,
            },
        },
        Stmt {
            kind: Block(
                [
                    StmtId(
                        2,
                    ),
                ],
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 83,
                end: 106,
            },
        },
        Stmt {
            kind: If {
                condition: ExprId(
                    2,
                ),
                then_block: StmtId(
                    1,
                ),
                else_block: Some(
                    StmtId(
                        3,
                    ),
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 44,
                end: 106,
            },
        },
        Stmt {
            kind: Block(
                [
                    StmtId(
                        4,
                    ),
                ],
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 40,
                end: 108,
            },
        },
        Stmt {
            kind: Function {
                name: Ident {
                    name: "isPositive",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 9,
                        end: 19,
                    },
                },
                generics: [],
                params: [
                    ParamDecl {
                        name: Ident {
                            name: "n",
                            span: Span {
                                file: FileId(
                                    0,
                                ),
                                start: 20,
                                end: 21,
                            },
                        },
                        ty: Some(
                            TypeAnnotation {
                                kind: Name {
                                    name: Ident {
                                        name: "number",
                                        span: Span {
                                            file: FileId(
                                                0,
                                            ),
                                            start: 23,
                                            end: 29,
                                        },
                                    },
                                    args: [],
                                },
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 23,
                                    end: 29,
                                },
                            },
                        ),
                        default: None,
                        pattern: None,
                        rest: false,
                        modifiers: None,
                    },
                ],
                return_type: Some(
                    TypeAnnotation {
                        kind: Name {
                            name: Ident {
                                name: "boolean",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 32,
                                    end: 39,
                                },
                            },
                            args: [],
                        },
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 32,
                            end: 39,
                        },
                    },
                ),
                type_predicate: None,
                body: StmtId(
                    5,
                ),
                doc: None,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 108,
            },
        },
    ],
    top_level: [
        StmtId(
            6,
        ),
    ],
    pattern_origins: {},
    tuple_pattern_sources: {},
    for_of_pattern_bindings: {},
    for_pattern_init_bindings: {},
    exported_decls: [],
}
